--- a/LibraryProject/Library.UI.csproj
+++ b/LibraryProject/Library.UI.csproj
@@ -116,31 +116,34 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AddNewBookPage.xaml.cs">
+    <Compile Include="AddingNewElements\AddNewBookPage.xaml.cs">
       <DependentUpon>AddNewBookPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="AddNewJornalPage.xaml.cs">
+    <Compile Include="AddingNewElements\AddNewJornalPage.xaml.cs">
       <DependentUpon>AddNewJornalPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AddingNewElements\AddNewEmployee.xaml.cs">
+      <DependentUpon>AddNewEmployee.xaml</DependentUpon>
     </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="EmployeePage.xaml.cs">
+    <Compile Include="BasicPages\EmployeePage.xaml.cs">
       <DependentUpon>EmployeePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="LibraryItemDitalesPage.xaml.cs">
       <DependentUpon>LibraryItemDitalesPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MenengerPage.xaml.cs">
+    <Compile Include="BasicPages\MenengerPage.xaml.cs">
       <DependentUpon>MenengerPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="BookCollectionPage.xaml.cs">
+    <Compile Include="Collections\BookCollectionPage.xaml.cs">
       <DependentUpon>BookCollectionPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="JornalCollectionPage.xaml.cs">
+    <Compile Include="Collections\JornalCollectionPage.xaml.cs">
       <DependentUpon>JornalCollectionPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MainsPage.xaml.cs">
+    <Compile Include="BasicPages\MainsPage.xaml.cs">
       <DependentUpon>MainsPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -165,15 +168,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="AddNewBookPage.xaml">
+    <Page Include="AddingNewElements\AddNewBookPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="AddNewJornalPage.xaml">
+    <Page Include="AddingNewElements\AddNewJornalPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="EmployeePage.xaml">
+    <Page Include="AddingNewElements\AddNewEmployee.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="BasicPages\EmployeePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -181,19 +188,19 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MenengerPage.xaml">
+    <Page Include="BasicPages\MenengerPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="BookCollectionPage.xaml">
+    <Page Include="Collections\BookCollectionPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="JornalCollectionPage.xaml">
+    <Page Include="Collections\JornalCollectionPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainsPage.xaml">
+    <Page Include="BasicPages\MainsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
